fixed some alignment issues

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -19,3 +19,6 @@ body {
 h1, h2, h3 {
   font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", "sans serif", HelveticaNeue-CondensedBlack;
 }
+p {
+  margin-block-end: 2.5rem;
+}
