--- a/src/styles/components/_projects.scss
+++ b/src/styles/components/_projects.scss
@@ -4,7 +4,7 @@
   width: 100%;
   justify-content: space-between;
   // min-height: 330px;
-  @media (max-width: 800px) {
+  @media (max-width: 1000px) {
     flex-direction: column;
     align-items: center;
     margin-bottom: 2.5rem;
@@ -13,7 +13,7 @@
 .project-image {
   flex: 0 0 50%;
   width: 50%;
-  @media (max-width: 800px) {
+  @media (max-width: 1000px) {
     width: 100%;
   }
   img {
@@ -25,7 +25,7 @@
   flex-direction: column;
   flex: 0 0 50%;
   width: 50%;
-  @media (max-width: 800px) {
+  @media (max-width: 1000px) {
     width: 100%;
     align-items: center;
     text-align: center;
@@ -39,7 +39,7 @@
     @media (max-width: 1201px) {
       font-size: small;
     }
-    @media (max-width: 800px) {
+    @media (max-width: 1000px) {
       font-size: medium;
     }
     @media (min-width: 1600px) {
