--- a/src/styles/components/_welcome-page.scss
+++ b/src/styles/components/_welcome-page.scss
@@ -24,7 +24,6 @@
     font-size: xx-large;
   }
   p {
-    margin-bottom: 2.5rem;
     margin-top: 0;
   }
   h1 {
@@ -61,6 +60,9 @@
   align-items: center;
   text-align: center;
   margin-bottom: 2.5rem;
+  p {
+    margin-bottom: 0;
+  }
   img {
     border-radius: 10%;
     box-shadow: 3px 3px 3px #eee;
